[tool.poetry]
name = "duplicate"
version = "0.1.0"
description = "Usuários duplicados PPPoE Huawei"
authors = ["Israel P. da Silva <israel4p@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
paramiko = "^2.9.2"

[tool.poetry.dev-dependencies]
pip-autoremove = "^0.10.0"
pyinstaller = "^4.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
