[tool.poetry]
name = "duplicate"
version = "0.1.0"
description = "Usuários duplicados PPPoE Huawei"
authors = ["Israel P. da Silva <israel4p@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
paramiko = "^2.11.0"

[tool.poetry.dev-dependencies]
pip-autoremove = "^0.10.0"
pyinstaller = "^4.10"
blue = "^0.7.0"
prospector = "^1.7.7"
pip-audit = "^2.4.4"
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
